argocd/apps/homelab-aws-creds-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-aws-creds
  namespace: homelab-aws-creds
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
  hostnames:
    - "homelab-aws-creds.carsonanderson.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homelab-aws-creds-agent
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
