argocd/apps/nginx-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: default
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
  hostnames:
    - "nginx.carsonanderson.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nginx
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
